syntax="proto3";
package pb;

service Greeter {
  rpc Hello(HelloRequest)returns(HelloResponse){}
  rpc Hello2(HelloRequest)returns(HelloResponse){}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}